# cmake_example

./: CMakeLists.txt  README  README.md
include/: add1.h  add2.h
lib/: CMakeLists.txt  add1.cpp  add2.cpp
src/: CMakeLists.txt  main.cpp
